@@ -49,7 +49,7 @@ Before release of KOffice 1.4
   - Pie settings at the same place as Subtype?
   - Check *all* subpages.
     - Axes page is ugly.
-    - Font page is ugly
+    - Font page is ugly.
   - Check handling of defaults.
 
 * Wizard
